--- a/assets/style.css
+++ b/assets/style.css
@@ -8,6 +8,14 @@ body {
     width: 100%;
 }
 
+.img-hover {
+  height: 100%;
+  position: absolute;
+  left: 150px;
+  top: 50px;
+  display: none;
+}
+
 .img-scaled-wh {
   width: 100%;
   height: 100%;
@@ -112,9 +120,26 @@ body {
   position: absolute;
   background-color: gray;
   display: none;
-  color: white;
-  opacity: 0.7;
-  text-align: center;
+  opacity: 0.9;
+}
+
+.overlay-text {
+    color: white;
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    width: 200px;
+    height: 200px;
+}
+
+.overlaysocial {
+  width: 75px;
+  height: 75px;
+  border-radius: 500px;
+  position: absolute;
+  background-color: white;
+  display: none;
+  opacity: 0.6;
 }
 
 .slide-thumbnaillife:hover {
